--- a/text/references.bib
+++ b/text/references.bib
@@ -416,6 +416,10 @@
   author = {Zhang, Y. and Xiao, Y. and Yang, M. and Ma, J.},
   title = {Cancer mutational signatures representation by large-scale context embedding},
   journal = {Bioinformatics},
+  year = {2020},
+  volume = {36},
+  number = {Supplement_1},
+  pages = {i309--i316},
   doi = {10.1093/bioinformatics/btaa433},
   pmid = {32657413}
 }
@@ -453,7 +457,7 @@
 }
 
 @article{PCAWG-MAIN,
-  author = {Consortium PCAWG},
+  author = {PCAWG Consortium, The},
   title = {Pan-cancer analysis of whole genomes},
   journal = {Nature},
   year = {2020},
