--- a/text/survival.Rmd
+++ b/text/survival.Rmd
@@ -7,29 +7,28 @@ stage at diagnosis, sex, ethnicity, and tissue-specific disease progression, to
 name the obvious ones. To explore these ideas, we tested models of survival
 using public longevity data from the CDC, accounting for age, gender and
 ethnicity. Our model assumes that at birth each person has a small initial
-probability per unit time to die, and that this probability 
-grows exponentially in time at some baseline rate that
-matches the observed CDC data. The rate of growth in risk is assumed to jump to
-a higher level at diagnosis, which we take as a proxy for onset. This represents
-an accelerated aging type model. To fit the model, we constrain the baseline
-risks using the available CDC life tables. We then constrain the cancer specific
-multiplier using the longevity data within the cancer tumor dataset. Our model
-estimates the effect of cancer type and class-specific cancer effects
-independently, resulting in a cancer and class specific estimate of the aging
-rate multiplier. 
+probability per unit time to die, and that this probability grows exponentially
+in time at some baseline rate that matches the observed CDC data. The rate of
+growth in risk is assumed to jump to a higher level at diagnosis, which we take
+as a proxy for onset. This represents an accelerated aging type model. To fit
+the model, we constrain the baseline risks using the available CDC life tables.
+We then constrain the cancer specific multiplier using the longevity data within
+the cancer tumor dataset. Our model estimates the effect of cancer type and
+class-specific cancer effects independently, resulting in a cancer and class
+specific estimate of the aging rate multiplier.
 
-To understand the model, we show in **Figure 7A** simulated survival time
-curves for four related groups. We start with a cohort of women aged 30 and show
-their expected survival (blue). By setting their cancer rate multiplier to $k=2$
-we can simulate the effect of a moderately deadly cancer (red). Compare this to
-a randomly selected group of women ranging in age from 30 to 70 years old (dark
-blue). Immediately the survival curve changes due to the mixture of ages,
+To understand the model, we show in **Figure 7A** simulated survival time curves
+for four related groups. We start with a cohort of women aged 30 and show their
+expected survival (light blue). By setting their cancer rate multiplier to $k=2$
+we can simulate the effect of a moderately deadly cancer (yellow). Compare this
+to a randomly selected group of women ranging in age from 30 to 70 years old
+(dark blue). Immediately the survival curve changes due to the mixture of ages,
 without any malignancy. Adding a $k=2$ malignancy further reduces expected
-lifespan (dark red). We can see that for different tissues, simply due to the
-change in distribution of age-at-diagnosis, we should expect equally deadly
-cancers to have *different* survival curves. The model takes this into account
-and the aggressiveness of the cancer can be estimated without the confounding
-aspect of age.
+lifespan (red). We can see that for different tissues, simply due to the change
+in distribution of age-at-diagnosis, we should expect equally deadly cancers to
+have *different* survival curves. The model takes this into account and the
+aggressiveness of the cancer can be estimated without the confounding aspect of
+age.
 
 We found that cancer types, as expected, have a range of prognoses relative to
 the general population. For example in **Figure 7B-E** we see three particularly
